k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cos-liberty
  namespace: pipelines-tutorial
  annotations:
    description: Route for application's http service.
  labels:
    application: cos-liberty
spec:
  to:
    name: cos-liberty
  port:
    targetPort: 9080-tcp
  tls:
    termination: edge
